# bootdns

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Earthfile  README.rst  bootdns.yaml  mise.toml  vendir.lock.yml  vendir.yml
.github/actions/get_data/: Dockerfile
.github/workflows/: main.yaml  main.yml  release.yaml
misc/coding-team/switch-to-clang/: 001-switch-gcc-to-clang-lld.md  002-fix-cross-sysroot-packages.md  003-fix-formatting.md  004-switch-targets-to-musl.md  005-fix-update-needed-flag.md  006-update-mise-toml.md  007-fix-musl-include-paths.md  008-fix-test-script-target.md  009-musl-cc-sysroots.md  010-fix-cross-compilation-flags.md
src/: dns_provider.rs  domeneshop.rs  main.rs
