[package]
name = "bootdns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cidr = { version = "0.2.2", features = ["serde"] }
dirs = "5.0.1"
env_logger = "0.11.3"
figment = { version = "0.10.18", features = ["env", "toml", "yaml"] }
hostname = "0.4.0"
if-addrs = "0.12.0"
log = "0.4.21"
netrc-rs = "0.1.2"
openssl-sys = { version = "0.9.102", features = ["vendored"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.202", features = ["derive"] }
url = "2.5.0"
