[package]
name = "bootdns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cidr = { version = "0.2.3", features = ["serde"] }
dirs = "5.0.1"
env_logger = "0.11.5"
figment = { version = "0.10.19", features = ["env", "toml", "yaml"] }
hostname = "0.4.0"
if-addrs = "0.13.2"
log = "0.4.22"
netrc-rs = "0.1.2"
openssl-sys = { version = "0.9.103", features = ["vendored"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.207", features = ["derive"] }
url = "2.5.2"
