[package]
name = "bootdns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
cidr = { version = "0.3.0", features = ["serde"] }
dirs = "6.0.0"
env_logger = "0.11.5"
figment = { version = "0.10.19", features = ["env", "toml", "yaml"] }
hostname = "0.4.0"
if-addrs = "0.15.0"
log = "0.4.22"
netrc-rs = "0.1.2"
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
serde = { version = "1.0.210", features = ["derive"] }
url = "2.5.2"
